# TrustFS

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README  README.md  SFSFuse.c  SFSFuse.h  autogen.sh  configure.ac
conf_examples/: aligned_aes.ini  aligned_auth_det.ini  aligned_auth_rand.ini  aligned_convergent.ini  aligned_det.ini  compress.ini  compress_auth_rand.ini  compress_det.ini  compress_fusecompress.ini  dedup.ini  dedup_ddumbfs.ini  dedup_ddumbfs_nf.ini  dedup_lessfs.ini  dedup_server_sgx_ddumbfs.ini  dedup_server_sgx_ddumbfs_det.ini  dedup_server_sgx_ddumbfs_det_nf.ini  local.ini  remote.ini  zlog.conf
layers_conf/: SFSConfig.c  SFSConfig.h  layers_def.h
layers_impl/align/: Makefile.am  alignfuse.c  alignfuse.h
layers_impl/align/drivers/: batch_blockalign.c  batch_blockalign.h  blockalign.c  blockalign.h  nopalign.c  nopalign.h
layers_impl/compression/: Makefile.am  compression.c  compression.h
layers_impl/compression/drivers/: compress_driver.c  compress_driver.h
layers_impl/crypto/: Makefile.am  sfuse.c  sfuse.h
layers_impl/crypto/drivers/: nopcrypt.c  nopcrypt.h  nopcrypt_padded.c  nopcrypt_padded.h  trusted_crypt.c  trusted_crypt.h
layers_impl/crypto/drivers/det/: convergent_encryption.c  convergent_encryption.h  det_authenticated.c  det_authenticated.h  det_symmetric.c  det_symmetric.h
layers_impl/crypto/drivers/openssl/: auth_encryption.c  auth_encryption.h  symmetric.c  symmetric.h
layers_impl/crypto/drivers/rand/: rand_authenticated.c  rand_authenticated.h  rand_symmetric.c  rand_symmetric.h
layers_impl/dedup/: Makefile.am  dedup.c  dedup.h
layers_impl/local/: Makefile.am  local.c  local.h
layers_impl/loopback/: Makefile.am  multi_loopback.c  multi_loopback.h
layers_impl/loopback/drivers/: erasure.c  erasure.h  rep.c  rep.h  xor.c  xor.h
layers_impl/nop/: Makefile.am  nopfuse.c  nopfuse.h
layers_impl/remote/: Makefile.am  remote.c  remote.h
logging/: logdef.c  logdef.h
logging/timestamps/: timestamps.c  timestamps.h
sgx_utils/: Makefile.am  sgx_utils.c  sgx_utils.h
sgx_utils/EnclaveC/: EnclaveC.c  EnclaveC.config.xml  EnclaveC.edl  EnclaveC.h  EnclaveC.lds  Makefile
sgx_utils/EnclaveCommons/: Enclave_private.pem  Enclave_public_key.pem  Ocalls.c  Ocalls.h  Seal.c  Seal.h
sgx_utils/EnclavePPL/: EnclavePPL.c  EnclavePPL.config.xml  EnclavePPL.edl  EnclavePPL.h  EnclavePPL.lds  Makefile
sgx_utils/Openssl/: auth_encryption.c  auth_encryption.h  ciphers.c  ciphers.h  symmetric.c  symmetric.h
utils/: utils.c  utils.h
utils/map/: map.c  map.h
